add new atoms header childs components to storybook

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,11 +10,10 @@
   --color-secondary: #6c757d;
   --color-success: #28a745;
   --color-info: #17a2b8;
-  --color-warning: #ffc107;
+  --color-orange: #ec982a;
   --color-danger: #dc3545;
   --color-light: #f8f9fa;
   --color-dark: #343a40;
-
 
   /* font size */
   --font-size-xxs: 0.75rem;
