--- a/src/components/atoms/styles/HeaderListButton.module.scss
+++ b/src/components/atoms/styles/HeaderListButton.module.scss
@@ -3,16 +3,21 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  width: 250px;
-  padding: 10px;
+  width: 240px;
+  border-radius: 10px;
+  padding: 15px 30px;
   text-align: center;
   background-color: var(--color-orange);
+  transition: all 0.3s ease-in-out;
+  &:hover {
+    background-color: var(--color-orange-hover);
+  }
   .container {
     display: flex;
     align-items: center;
     justify-content: center;
     .text {
-      font-size: var(--font-size-md);
+      font-size: var(--font-size-sm);
       font-weight: var(--font-weight-bold);
       color: var(--color-light);
     }
