--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,6 +11,7 @@
   --color-success: #28a745;
   --color-info: #17a2b8;
   --color-orange: #ec982a;
+  --color-orange-hover: #ffbc64;
   --color-danger: #dc3545;
   --color-light: #f8f9fa;
   --color-dark: #343a40;
