--- a/src/components/molecules/styles/HeaderListBox.module.scss
+++ b/src/components/molecules/styles/HeaderListBox.module.scss
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: end;
 }
 
 @media screen and (max-width: 1280px) {
