--- a/src/components/organism/styles/Hero.module.scss
+++ b/src/components/organism/styles/Hero.module.scss
@@ -3,7 +3,7 @@
   width: 100vw;
   height: 700px;
   max-height: 700px;
-  z-index: -1;
+  z-index: 1;
   .image {
     position: absolute;
     top: 0;
@@ -13,7 +13,8 @@
   }
   .content {
     position: absolute;
-    width: 60%;
+    width: 55%;
+    height: 480px;
     top: 150px;
     left: 20%;
   }
