--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -26,6 +26,7 @@
   --font-size-2xl: 1.875rem;
   --font-size-3xl: 2.25rem;
   --font-size-4xl: 3rem;
+  --font-size-5xl: 4.8rem;
 
   /* font wight */
   --font-weight-light: 300;
