--- a/src/components/molecules/styles/HeroContent.module.scss
+++ b/src/components/molecules/styles/HeroContent.module.scss
@@ -2,7 +2,6 @@
   position: absolute;
   width: 100%;
   height: auto;
-  border: 1px solid red;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -34,17 +33,29 @@
       margin-bottom: 10px;
     }
     .flexBox {
+      position: relative;
       width: 100%;
       height: 190px;
       margin-bottom: 5px;
-      background-color: var(--color-light);
+      // background-color: var(--color-light);
+      &::before {
+        transform: skewX(-10deg);
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: -1;
+        background-color: var(--color-light);
+      }
       ul {
         display: flex;
         justify-content: space-between;
         li {
           display: block;
           width: 30%;
-          padding: 25px 0px;
+          padding: 20px 0px;
           text-align: center;
           .flexImage {
             width: 100px;
@@ -59,10 +70,10 @@
           }
           .desc {
             color: black;
-            font-size: 20px;
+            font-size: 25px;
             line-height: 22px;
             .accentText {
-              font-size: 25px;
+              font-size: 30px;
               line-height: 22px;
               color: var(--color-primary);
             }
@@ -71,9 +82,33 @@
       }
     }
     .contactButton {
-      display: block;
-      padding: 20px;
+      display: inline-block;
+      padding: 25px 30px;
+      border-radius: 15px;
       background-color: var(--color-orange);
+      box-shadow:
+        -8px 0px 16px 0px #9b9b9b,
+        8px 8px 16px 0px #d2d2d2;
+      &:hover {
+        background-color: var(--color-orange-hover);
+      }
+      .contactContent {
+        width: auto;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        .contactButtonIcon {
+          width: 30px;
+          height: 30px;
+          margin-right: 10px;
+          color: white;
+        }
+        .text {
+          color: white;
+          font-size: 23px;
+          font-weight: bold;
+        }
+      }
     }
   }
   .rightBox {
