--- a/src/components/organism/styles/Worries.module.scss
+++ b/src/components/organism/styles/Worries.module.scss
@@ -7,7 +7,9 @@
     width: 100%;
     height: 100%;
     .flexBox {
-      width: 100%;
+      width: 60%;
+      padding: 100px 0px 30px 0px;
+      margin: 0 auto;
       height: auto;
       display: flex;
       justify-content: space-between;
@@ -18,12 +20,14 @@
       height: 450px;
       .triangleBox {
         position: absolute;
-        z-index: 1;
+        z-index: 2;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 50pc;
-        background-color: rgb(105, 41, 41);
+        border-style: solid;
+        border-right: 1000px solid transparent;
+        border-left: 1000px solid transparent;
+        border-top: 140px solid #ffffff;
+        border-bottom: 0;
       }
       .solutionBoxImage {
         position: absolute;
