--- a/src/components/molecules/styles/WorriesCard.module.scss
+++ b/src/components/molecules/styles/WorriesCard.module.scss
@@ -7,6 +7,8 @@
   position: relative;
   text-align: center;
   width: calc(31% - 4rem);
+  box-shadow: 0px 0px 15px -5px #777777;
+  border-radius: 10px;
   .problemBox {
     position: absolute;
     top: -10px;
@@ -17,6 +19,8 @@
     padding: 3px;
     .text {
       display: block;
+      width: 100%;
+      height: auto;
       font-size: 14px;
       color: white;
     }
@@ -30,12 +34,14 @@
   .textBox {
     p {
       display: block;
+      width: 100%;
       font-size: 14px;
       font-weight: 700;
-      line-height: 16.8px;
-      margin-bottom: 10px;
+      line-height: 14.8px;
     }
-    h2 {
+    h1 {
+      display: block;
+      width: 100%;
       font-size: 22px;
       font-weight: 700;
       line-height: 26.4px;
