--- a/src/components/organism/styles/Worries.module.scss
+++ b/src/components/organism/styles/Worries.module.scss
@@ -13,11 +13,16 @@
       height: auto;
       display: flex;
       justify-content: space-between;
+      .card {
+        &:nth-child(2) {
+          margin-top: 400px;
+        }
+      }
     }
     .solutionBox {
       position: relative;
       width: 100vw;
-      height: 450px;
+      height: 430px;
       .triangleBox {
         position: absolute;
         z-index: 2;
@@ -34,11 +39,29 @@
         z-index: 1;
         top: 0;
         width: 100%;
-        height: 450px;
+        height: 430px;
       }
       .solutionTitle {
+        position: absolute;
+        z-index: 2;
+        top: 200px;
+        left: 0;
+        right: 0;
+        text-align: center;
+        color: white;
+        font-size: 37px;
       }
       .solutionText {
+        position: absolute;
+        z-index: 2;
+        top: 330px;
+        text-align: center;
+        left: 0;
+        right: 0;
+        color: white;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 25px;
       }
     }
   }
