--- a/src/components/atoms/styles/ViewMoreButton.module.scss
+++ b/src/components/atoms/styles/ViewMoreButton.module.scss
@@ -1,11 +1,12 @@
 .button {
-  display: inline-block;
+  display: block;
   position: relative;
   overflow: hidden;
   text-decoration: none;
   width: 300px;
   max-width: 300px;
   height: 50px;
+  margin: 0 auto;
   padding: 15px 0px;
   background-color: white;
   border: 1px solid #224c9a;
