--- a/src/components/organism/styles/Achievement.module.scss
+++ b/src/components/organism/styles/Achievement.module.scss
@@ -1,16 +1,30 @@
 .achievement {
   width: 100vw;
   height: auto;
-  padding: 150px 0 100px 0;
+  padding: 250px 0 100px 0;
   .container {
     width: 60%;
     height: 100%;
     margin: 0 auto;
-    border: 1px solid red;
-    .mainContent {
+    .mainContents {
       width: 100%;
       height: auto;
       max-width: 1280px;
+      .flexBox {
+        width: 90%;
+        height: 350px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        border: 1px solid red;
+        margin-bottom: 20px;
+      }
+      .flexBox:nth-child(1) {
+        margin-top: 50px;
+      }
+      .flexBox:nth-child(2) {
+        margin-bottom: 50px;
+      }
     }
   }
 }
